modifique la url de linkedin

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                             <p class="contenido__oficio">develop full stack</p>
                             <ul class="contenido__lista">
                                 <li class="contenido__item">
-                                    <a href="https://www.linkedin.com/in/joel-dario-mu%C3%B1oz-68b173180/" target="_blank">
+                                    <a href="https://www.linkedin.com/in/joel-develop/" target="_blank">
                                         <div class="contenido__icon contenido__icon--linkedin"></div>
                                     </a>
                                 </li>
@@ -440,28 +440,25 @@
                         class="contacto__input" 
                         type="text" 
                         id="nombre" 
-                        data-nombre
-                        placeholder="Nombre Apellido">
+                        placeholder="Nombre Apellido"
+                        data-nombre>
                     <div data-alert-nombre-container></div>
-
                     <label class="contacto__label" for="email">E-mail</label>
                     <input 
                         class="contacto__input" 
                         type="email" 
                         id="email" 
-                        data-email
-                        placeholder="usuario@mail.com">
-                    <div data-alert-email-container></div>
-
+                        placeholder="usuario@mail.com"
+                        data-email>
+                        <div data-alert-email-container></div>
                     <label class="contacto__label" for="asunto">Asunto</label>
                     <input 
                         class="contacto__input" 
                         type="text" 
                         id="asunto" 
-                        data-asunto
-                        placeholder="Asunto">
+                        placeholder="Asunto"
+                        data-asunto>
                     <div data-alert-asunto-container></div>
-
                     <label class="contacto__label" for="mensaje">Mensaje</label>
                     <textarea 
                         class="contacto__input--text-area" 
@@ -471,12 +468,10 @@
                         data-mensaje>
                     </textarea>
                     <div data-alert-mensaje-container></div>
-
                     <button 
                         class="contacto__btn " 
-                        type="submit" 
-                        data-enviar-btn 
-                        disabled="true">
+                        type="submit"
+                        data-btn-enviar>
                         Enviar
                     </button>
                 </form>
