--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
                         </ul>
                     </div>
                 </div>
-                <a href="./assets/CV.pdf" class="sobre-mi__btn-descargar">
+                <a href="./assets/CV.pdf" class="sobre-mi__btn-descargar" target="_blank">
                     <h4 class="sobre_mi__btn-texto">
                         Descargar CV
                         <div class="sobre-mi__icon-descargar"></div>
